refactor: change to return immutable collection